# IsolatedSoul

./: README.md
ced/: .gitignore  Makefile  README.md  ced.c
monkey/: .gitignore  CMakeLists.txt  README.md
monkey/src/: CMakeLists.txt  lexer.cpp  lexer.h  token.cpp  token.h
monkey/tests/: CMakeLists.txt  lexer.test.cpp
rsbday/: Cargo.toml  README.md
rsbday/src/: db.rs  main.rs  records.rs  utils.rs
rskernel/: Cargo.toml  README.md  boot.sh  build.sh  x86_64-rskernel.json
rskernel/.cargo/: config.toml
rskernel/src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
rskernel/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
rskernel/src/task/: executor.rs  keyboard.rs  mod.rs
rskernel/tests/: basic_boot.rs  heap_allocation.rs  heap_allocations.rs  should_panic.rs  stack_overflow.rs
