[package]
authors = ["yiren.chow@gmail.com <yiren.chow@gmail.com>"]
edition = "2018"
name = "rsbday"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "~2.27.0"
colored = "2.0"
csv = "1.1"
rusqlite = "0.25.3"
serde = {version = "1.0", features = ["derive"]}

[profile.release]
debug = true
