[package]
name = "rskernel"
version = "0.1.0"
authors = ["yiren.chow@gmail.com <yiren.chow@gmail.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
